--- a/styles/main.css
+++ b/styles/main.css
@@ -9,15 +9,19 @@ body{
 }
 main{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .container{
     background-color:white;
     width: 870px;
     padding: 30px;
+    border-radius: 5px;
+    margin-top: 21px;
 }
 hr{
     border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
 }
 /* top players styel */
 .top-players{
@@ -44,4 +48,92 @@ hr{
 .player-name{
     margin-left: 16px;
     font-size: 18px;
+}
+/* top blog styles */
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
+}
+.blog{
+    display: flex;
+}
+.blog .thumbnail img{
+    width: 177px;
+    height: 117px;
+}
+.blog-info{
+    margin-left: 16px;
+}
+.blog-title{
+    font-size: 20px;
+}
+.blog-author{
+    color: #9F9F9F;
+    font-size: 16px;
+}
+.blog-author a{
+    text-decoration: none;
+    font-size: 16px;
+    color: #562EFF;
+}
+
+/*  --------------- 
+courses styles 
+-----------------*/
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+}
+.course .course-banner img{
+    width: 244px;
+    height: 104px;
+}
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.fa-star{
+    font-size: 12px;
+}
+.fa-star.filled{
+    color: #FFC014;
+}
+.fa-star.empty{
+    color: #AEAEAE;
+}
+.course-duration{
+    background-color: rgba(219, 11, 11, 0.384);
+    border-radius: 7px;
+}
+/* ---------------
+Media QueriesK
+---------------- */
+/*--------------
+Mobaile Devices
+  ---------------- */
+  @media only screen and (max-width:688px) {
+      .container{
+          width: 100%;
+      }
+      .players, .blogs, .courses{
+            grid-template-columns: repeat(1, 1fr);
+      }
+      .player, .blog{
+          flex-direction: column;
+      }
+      
+  }
+
+  /* ---------------
+  Tablete Devices
+  --------------- */
+@media only screen and (min-width:688px) and (max-width:992px) {
+    .container{
+        width: 100%;
+    }
+    .players, .courses{
+        grid-template-columns: repeat(2, 1fr);    }
 }
